@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2020 the original author or authors.
+ * Copyright 2016-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -321,6 +321,7 @@ public class IntegrationFlowBeanPostProcessor
 					new NameMatchMethodPointcutAdvisor(new IntegrationFlowLifecycleAdvice(target));
 			integrationFlowAdvice.setMappedNames(
 					"getInputChannel",
+					"getIntegrationComponents",
 					"start",
 					"stop",
 					"isRunning",
