@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2019 the original author or authors.
+ * Copyright 2018-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -73,6 +73,12 @@ class IntegrationFlowLifecycleAdvice implements MethodInterceptor {
 			result = invocation.proceed();
 			if (result == null) {
 				result = this.delegate.getInputChannel();
+			}
+		}
+		else if ("getIntegrationComponents".equals(method)) {
+			result = invocation.proceed();
+			if (result == null) {
+				result = this.delegate.getIntegrationComponents();
 			}
 		}
 		else {
